# sankeymien

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
sankeymien/: __init__.py  __main__.py  sankey.py  utils.py
tests/: abundance_table.tsv  experiments.json  test_sankey.py
